@@ -193,7 +193,8 @@
   {
     if (!VirtualAlloc(map_addr,map_len,MEM_COMMIT,PAGE_READWRITE)) {
       var DWORD errcode = GetLastError();
-      fprintf(stderr,GETTEXTL("Cannot map memory to address 0x%x ."),map_addr);
+      fprintf(stderr,GETTEXTL("Cannot map memory to address 0x%x .\n"),
+              map_addr);
       errno_out(errcode);
       return -1; /* error */
     }
@@ -351,7 +352,8 @@
                       map_flags | MAP_FIXED, /* exactly at this address! */
                       mmap_zero_fd, 0) /* put empty pages */
          == (void*)(-1)) {
-      fprintf(stderr,GETTEXTL("Cannot map memory to address 0x%x ."),map_addr);
+      fprintf(stderr,GETTEXTL("Cannot map memory to address 0x%x .\n"),
+              map_addr);
       errno_out(errno);
       return -1; /* error */
     }
