@@ -1,5 +1,10 @@
 2004-03-09  Sam Steingold  <sds@gnu.org>
 
+	* spvw_mmap.d, spvw_multimap.d: added a "\n" at the end of
+	error messages
+
+2004-03-09  Sam Steingold  <sds@gnu.org>
+
 	* Makefile.devel (EXCLUDE): exclude all doc/.cvsignore
 	(CLISP): set to $(CURDIR)/build/clisp
 	(src/uninames.h): use it
